--- a/mysqli.html
+++ b/mysqli.html
@@ -10,6 +10,24 @@
 </head>
 <body>
 	<div class="container">
+		<nav class="navbar navbar-expand-lg navbar-light bg-light">
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarSupportedContent">
+				<ul class="navbar-nav mr-auto">
+				<li class="nav-item dropdown">
+					<a class="nav-link dropdown-toggle" href="#" id="cheatSheetDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+					Cheat Sheets
+					</a>
+					<div class="dropdown-menu" aria-labelledby="cheatSheetDropdown">
+					<a class="dropdown-item" href="mysqli.html">MySQLi</a>
+					<a class="dropdown-item" href="sql.html">SQL</a>
+					</div>
+				</li>
+				</ul>
+			</div>
+		</nav>
 		<h1>MySQLi Cheat Sheet</h1>
 		<script src="https://gist.github.com/Obsidian791/38fe9070c61f60ef28149520eb958765.js"></script>
 	</div>
