--- a/index.html
+++ b/index.html
@@ -28,8 +28,11 @@
 				</ul>
 			</div>
 		</nav>
-		<h1>Cheat Sheets</h1>
-		<script src="https://gist.github.com/Obsidian791/38fe9070c61f60ef28149520eb958765.js"></script>
+		<div class="row">
+			<div class="col">
+				<h1>Home</h1>
+			</div>
+		</div>
 	</div>
 </body>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
