--- a/sql.html
+++ b/sql.html
@@ -30,8 +30,7 @@
 		</nav>
 		<div class="row">
 			<div class="col">
-				<h1>MySQLi Cheat Sheet</h1>
-				<script src="https://gist.github.com/Obsidian791/38fe9070c61f60ef28149520eb958765.js"></script>
+				<h1>SQL Cheat Sheet</h1>
 			</div>
 		</div>
 	</div>
