--- a/index.html
+++ b/index.html
@@ -28,9 +28,11 @@
 				</ul>
 			</div>
 		</nav>
-		<div class="row">
-			<div class="col">
-				<h1>Home</h1>
+		<div class="container-fluid">
+			<div class="row">
+				<div class="col">
+					<h1>Home</h1>
+				</div>
 			</div>
 		</div>
 	</div>
