--- a/mysqli.html
+++ b/mysqli.html
@@ -28,10 +28,12 @@
 				</ul>
 			</div>
 		</nav>
-		<div class="row">
-			<div class="col">
-				<h1>MySQLi Cheat Sheet</h1>
-				<script src="https://gist.github.com/Obsidian791/38fe9070c61f60ef28149520eb958765.js"></script>
+		<div class="container-fluid">
+			<div class="row">
+				<div class="col">
+					<h1>MySQLi Cheat Sheet</h1>
+					<script src="https://gist.github.com/Obsidian791/38fe9070c61f60ef28149520eb958765.js"></script>
+				</div>
 			</div>
 		</div>
 	</div>
