--- a/sql.html
+++ b/sql.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html class="bg-dark">
 <head>
 	<!-- Required meta tags -->
     <meta charset="utf-8">
@@ -9,8 +9,8 @@
     <title>Obsidian - SQL Cheat Sheet</title>
 </head>
 <body>
-	<div class="container-fluid bg-dark">
-		<div class="container bg-dark">
+	<div class="container-fluid">
+		<div class="container">
 			<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
