--- a/sql.html
+++ b/sql.html
@@ -9,21 +9,24 @@
     <title>Obsidian - SQL Cheat Sheet</title>
 </head>
 <body>
-	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+	<nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-3">
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
 			<ul class="navbar-nav mr-auto">
-			<li class="nav-item dropdown">
-				<a class="nav-link dropdown-toggle" href="#" id="cheatSheetDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-				Cheat Sheets
-				</a>
-				<div class="dropdown-menu" aria-labelledby="cheatSheetDropdown">
-				<a class="dropdown-item" href="mysqli.html">MySQLi</a>
-				<a class="dropdown-item" href="sql.html">SQL</a>
-				</div>
-			</li>
+				<li class="nav-item">
+					<a class="nav-link" href="index.html">Home</a>
+				</li>
+				<li class="nav-item dropdown">
+					<a class="nav-link dropdown-toggle" href="#" id="cheatSheetDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+					Cheat Sheets
+					</a>
+					<div class="dropdown-menu" aria-labelledby="cheatSheetDropdown">
+					<a class="dropdown-item" href="mysqli.html">MySQLi</a>
+					<a class="dropdown-item" href="sql.html">SQL</a>
+					</div>
+				</li>
 			</ul>
 		</div>
 	</nav>
