--- a/sql.html
+++ b/sql.html
@@ -34,6 +34,7 @@
 		<div class="row">
 			<div class="col">
 				<h1>SQL Cheat Sheet</h1>
+				<script src="https://gist.github.com/Obsidian791/853c35c9399afb5afe03c8588402e193.js"></script>
 			</div>
 		</div>
 	</div>
