--- a/markdown.html
+++ b/markdown.html
@@ -23,8 +23,9 @@
 					Cheat Sheets
 					</a>
 					<div class="dropdown-menu" aria-labelledby="cheatSheetDropdown">
-					<a class="dropdown-item" href="mysqli.html">MySQLi</a>
-					<a class="dropdown-item" href="sql.html">SQL</a>
+						<a class="dropdown-item" href="mysqli.html">MySQLi</a>
+						<a class="dropdown-item" href="sql.html">SQL</a>
+						<a class="dropdown-item" href="markdown.html">Markdown</a>
 					</div>
 				</li>
 			</ul>
