--- a/mysqli.html
+++ b/mysqli.html
@@ -37,6 +37,7 @@
 				<h1>MySQLi Cheat Sheet</h1>
 				<script src="https://gist.github.com/Obsidian791/b11a1766225cca87178aa522787adef7.js"></script>
 				<script src="https://gist.github.com/Obsidian791/38fe9070c61f60ef28149520eb958765.js"></script>
+				<script src="https://gist.github.com/Obsidian791/c7b4f97e74bd488448de74aad1a65e89.js"></script>
 			</div>
 		</div>
 	</div>
