Added Ajax page

--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
 					Cheat Sheets
 					</a>
 					<div class="dropdown-menu" aria-labelledby="cheatSheetDropdown">
+						<a class="dropdown-item" href="mysqli.html">Ajax</a>
+						<a class="dropdown-item" href="markdown.html">Markdown (Gist)</a>
 						<a class="dropdown-item" href="mysqli.html">MySQLi</a>
 						<a class="dropdown-item" href="sql.html">SQL</a>
-						<a class="dropdown-item" href="markdown.html">Markdown</a>
 					</div>
 				</li>
 			</ul>
