--- a/ajax.html
+++ b/ajax.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <title>Obsidian - SQL Cheat Sheet</title>
+    <title>Ajax Cheat Sheet</title>
 </head>
 <body>
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-3">
@@ -35,8 +35,8 @@
 	<div class="container">
 		<div class="row">
 			<div class="col">
-				<h1>SQL Cheat Sheet</h1>
-				<script src="https://gist.github.com/Obsidian791/853c35c9399afb5afe03c8588402e193.js"></script>
+				<h1>Markdown</h1>
+				<script src="https://gist.github.com/ww9/44f08d44327a40d2ab309a349bebec57.js"></script>
 			</div>
 		</div>
 	</div>
