Added Ajax page

--- a/ajax.html
+++ b/ajax.html
@@ -23,7 +23,7 @@
 					Cheat Sheets
 					</a>
 					<div class="dropdown-menu" aria-labelledby="cheatSheetDropdown">
-						<a class="dropdown-item" href="mysqli.html">Ajax</a>
+						<a class="dropdown-item" href="ajax.html">Ajax</a>
 						<a class="dropdown-item" href="markdown.html">Markdown (Gist)</a>
 						<a class="dropdown-item" href="mysqli.html">MySQLi</a>
 						<a class="dropdown-item" href="sql.html">SQL</a>
@@ -35,8 +35,8 @@
 	<div class="container">
 		<div class="row">
 			<div class="col">
-				<h1>Markdown</h1>
-				<script src="https://gist.github.com/ww9/44f08d44327a40d2ab309a349bebec57.js"></script>
+				<h1>Ajax</h1>
+				<script src="https://gist.github.com/Obsidian791/6b27b118528586345f499c7c77006c74.js"></script>
 			</div>
 		</div>
 	</div>
