Added Ajax page

--- a/ajax.html
+++ b/ajax.html
@@ -35,7 +35,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col">
-				<h1>Ajax</h1>
+				<h1>Ajax Cheat Sheet</h1>
 				<script src="https://gist.github.com/Obsidian791/6b27b118528586345f499c7c77006c74.js"></script>
 			</div>
 		</div>
