--- a/markdown.html
+++ b/markdown.html
@@ -35,7 +35,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col">
-				<h1>Markdown</h1>
+				<h1>Markdown Cheat Sheet</h1>
 				<script src="https://gist.github.com/ww9/44f08d44327a40d2ab309a349bebec57.js"></script>
 			</div>
 		</div>
