--- a/markdown.html
+++ b/markdown.html
@@ -19,10 +19,10 @@
 					<a class="nav-link" href="index.html">Home</a>
 				</li>
 				<li class="nav-item dropdown">
-					<a class="nav-link dropdown-toggle" href="#" id="cheatSheetDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-					Cheat Sheets
+					<a class="nav-link dropdown-toggle" href="#" id="snippetsDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+					Snippets
 					</a>
-					<div class="dropdown-menu" aria-labelledby="cheatSheetDropdown">
+					<div class="dropdown-menu" aria-labelledby="snippetsDropdown">
 						<a class="dropdown-item" href="ajax.html">Ajax</a>
 						<a class="dropdown-item" href="markdown.html">Markdown (Gist)</a>
 						<a class="dropdown-item" href="mysqli.html">MySQLi</a>
