--- a/datatables.html
+++ b/datatables.html
@@ -24,6 +24,7 @@
 					</a>
 					<div class="dropdown-menu" aria-labelledby="snippetsDropdown">
 						<a class="dropdown-item" href="ajax.html">Ajax</a>
+						<a class="dropdown-item" href="datatables.html">DataTables</a>
 						<a class="dropdown-item" href="markdown.html">Markdown (Gist)</a>
 						<a class="dropdown-item" href="mysqli.html">MySQLi</a>
 						<a class="dropdown-item" href="sql.html">SQL</a>
