--- a/socket.io.html
+++ b/socket.io.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <title>Obsidian github</title>
+    <title>Socket.io</title>
 </head>
 <body>
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-3">
@@ -37,7 +37,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col">
-				<script src="https://gist.github.com/ww9/44f08d44327a40d2ab309a349bebec57.js"></script>
+				<script src="https://gist.github.com/Obsidian791/f6a31153cb1bee3c32d1294e07fa6982.js"></script>
 			</div>
 		</div>
 	</div>
