--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 						<a class="dropdown-item" href="datatables.html">DataTables</a>
 						<a class="dropdown-item" href="markdown.html">Markdown (Gist)</a>
 						<a class="dropdown-item" href="mysqli.html">MySQLi</a>
+						<a class="dropdown-item" href="socket.io.html">Socket.io</a>
 						<a class="dropdown-item" href="sql.html">SQL</a>
 					</div>
 				</li>
