--- a/socket.io.html
+++ b/socket.io.html
@@ -34,7 +34,7 @@
 			</ul>
 		</div>
 	</nav>
-	<div class="container">
+	<div class="container bg-dark">
 		<div class="row">
 			<div class="col">
 				<script src="https://gist.github.com/Obsidian791/f6a31153cb1bee3c32d1294e07fa6982.js"></script>
