--- a/ajax.html
+++ b/ajax.html
@@ -34,7 +34,7 @@
 			</ul>
 		</div>
 	</nav>
-	<div class="container">
+	<div class="container bg-dark text-white">
 		<div class="row">
 			<div class="col">
 				<script src="https://gist.github.com/Obsidian791/6b27b118528586345f499c7c77006c74.js"></script>
