--- a/mysqli.html
+++ b/mysqli.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <title>Obsidian - MySQLi Cheat Sheet</title>
+	<link rel="stylesheet" href="/css/bootstrap.darkly.min.css">
+	<title>Obsidian - MySQLi Cheat Sheet</title>
 </head>
 <body>
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-3">
