added gist class

--- a/ajax.html
+++ b/ajax.html
@@ -39,7 +39,9 @@
 	<div class="container bg-dark text-white">
 		<div class="row">
 			<div class="col">
-				<script src="https://gist.github.com/Obsidian791/6b27b118528586345f499c7c77006c74.js"></script>
+				<div class="gist">
+					<script src="https://gist.github.com/Obsidian791/6b27b118528586345f499c7c77006c74.js"></script>
+				</div>
 			</div>
 		</div>
 	</div>
