--- a/markdown.html
+++ b/markdown.html
@@ -39,7 +39,9 @@
 	<div class="container">
 		<div class="row">
 			<div class="col">
-				<script src="https://gist.github.com/ww9/44f08d44327a40d2ab309a349bebec57.js"></script>
+				<div class="gist">
+					<script src="https://gist.github.com/ww9/44f08d44327a40d2ab309a349bebec57.js"></script>
+				</div>
 			</div>
 		</div>
 	</div>
