--- a/socket.io.html
+++ b/socket.io.html
@@ -39,7 +39,9 @@
 	<div class="container bg-dark">
 		<div class="row">
 			<div class="col">
-				<script src="https://gist.github.com/Obsidian791/f6a31153cb1bee3c32d1294e07fa6982.js"></script>
+				<div class="gist">
+					<script src="https://gist.github.com/Obsidian791/f6a31153cb1bee3c32d1294e07fa6982.js"></script>
+				</div>
 			</div>
 		</div>
 	</div>
