--- a/sql.html
+++ b/sql.html
@@ -39,7 +39,9 @@
 	<div class="container">
 		<div class="row">
 			<div class="col">
-				<script src="https://gist.github.com/Obsidian791/853c35c9399afb5afe03c8588402e193.js"></script>
+				<div class="gist">
+					<script src="https://gist.github.com/Obsidian791/853c35c9399afb5afe03c8588402e193.js"></script>
+				</div>
 			</div>
 		</div>
 	</div>
