--- a/mysqli.html
+++ b/mysqli.html
@@ -39,7 +39,9 @@
 	<div class="container">
 		<div class="row">
 			<div class="col">
-				<script src="https://gist.github.com/Obsidian791/01dbb363f8efa6d3869df98e0e75a0b0.js"></script>
+				<div class="gist">
+					<script src="https://gist.github.com/Obsidian791/01dbb363f8efa6d3869df98e0e75a0b0.js"></script>
+				</div>
 			</div>
 		</div>
 	</div>
